crates/gossamer-diagnostics/tests/snapshots/GP0021.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0021]: A format placeholder must be a binding name, a format specification, or an explicit positional placeholder. Bind complex expressions first. - here
--- framed ---
error[GP0021]: A format placeholder must be a binding name, a format specification, or an explicit positional placeholder. Bind complex expressions first.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
